--- a/pvLR/index.html
+++ b/pvLR/index.html
@@ -4,9 +4,9 @@
 <head>
    
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://domínio.com">
-    <meta property="og:title" content="Conteúdo Exclusivo">
-    <meta property="og:description" content="Conteúdo Exclusivo">
+    <meta property="og:url" content="https://everydaynationalnews.site">
+    <meta property="og:title" content="Free Presentation">
+    <meta property="og:description" content="Free Presentation">
     <meta property="og:image" content="https://img.imageboss.me/atm/cdn/format:auto/u/umsGbYu2QNOfeAn5fEqSwCDI4VE3/l/rBhIAv7621085.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./assets/css/com.css">
 
   <!-- Título da Página -->
-  <title>Conteúdo Exclusivo!</title>
+  <title>Free Presentation</title>
 
   <style type="text/css">
     header {
@@ -42,7 +42,7 @@
         <div class="col-lg-8 text-center">
           
           <!-- VSL -->
-
+           <div id="vid_66ad4651dbd407000b0a1892" style="position:relative;width:100%;padding: 56.25% 0 0;"> <img id="thumb_66ad4651dbd407000b0a1892" src="https://images.converteai.net/7ee76c7b-b701-481f-b973-2b478faae041/players/66ad4651dbd407000b0a1892/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"> <div id="backdrop_66ad4651dbd407000b0a1892" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div> </div> <script type="text/javascript" id="scr_66ad4651dbd407000b0a1892"> var s=document.createElement("script"); s.src="https://scripts.converteai.net/7ee76c7b-b701-481f-b973-2b478faae041/players/66ad4651dbd407000b0a1892/player.js", s.async=!0,document.head.appendChild(s); </script> <style> .elementor-element:has(#smartplayer) { width: 100%; } </style>
            
           <link rel="prerender" href="https://pay.hotmart.com/123456789?checkoutMode=10"/>
 
