--- a/pvLR/index.html
+++ b/pvLR/index.html
@@ -11,7 +11,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Conteúdo Exclusivo">
+    <meta name="description" content="Free Presentation">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -437,11 +437,7 @@
 
   <footer class="bg-white py-3 text-center">
 
-    <span style="color:#6C757D">Copyright 2024 – Conteúdo Exclusivo ®
-        <br>Todos os direitos reservados.</span><br><br>
-
-      <div class="text-secondary"><a href="termos.html" class="text-secondary">Termos de Uso</a> – <a href="privacidade.html"
-          class="text-secondary">Políticas de Privacidade</a></div><br>
+    <span style="color:#6C757D">Copyright® 2024
 
 <script>
     let prefix = ["https://payment.hotmart.com", "https://pay.hotmart.com", "https://go.hotmart.com"];
