--- a/pvLR/index.html
+++ b/pvLR/index.html
@@ -68,6 +68,15 @@ function getParams() {
     })
 }();
 </script>
+
+<script>
+  window.pixelId = "66b197c234a360780b7a8af7";
+  var a = document.createElement("script");
+  a.setAttribute("async", "");
+  a.setAttribute("defer", "");
+  a.setAttribute("src", "https://cdn.utmify.com.br/scripts/pixel/pixel.js");
+  document.head.appendChild(a);
+</script>
           
   </footer>
 
