--- a/pvLR/index.html
+++ b/pvLR/index.html
@@ -77,6 +77,12 @@ function getParams() {
   a.setAttribute("src", "https://cdn.utmify.com.br/scripts/pixel/pixel.js");
   document.head.appendChild(a);
 </script>
+
+<script
+  src="https://cdn.utmify.com.br/scripts/utms/latest.js"
+  async
+  defer
+></script>
           
   </footer>
 
