--- a/pvLR/index.html
+++ b/pvLR/index.html
@@ -2,6 +2,15 @@
 <html lang="pt-BR" dir="ltr">
 
 <head>
+
+<link rel="preload" href="https://scripts.converteai.net/7ee76c7b-b701-481f-b973-2b478faae041/players/66b1826c9f4283000b313c30/player.js" as="script">
+<link rel="preload" href="https://cdn.converteai.net/lib/js/smartplayer/v1/smartplayer.min.js" as="script">
+<link rel="preload" href="https://images.converteai.net/7ee76c7b-b701-481f-b973-2b478faae041/players/66b1826c9f4283000b313c30/thumbnail.jpg" as="image">
+<link rel="preload" href="https://cdn.converteai.net/7ee76c7b-b701-481f-b973-2b478faae041/66b1822e252116000bb09f1f/main.m3u8" as="fetch">
+<link rel="dns-prefetch" href="https://cdn.converteai.net">
+<link rel="dns-prefetch" href="https://scripts.converteai.net">
+<link rel="dns-prefetch" href="https://images.converteai.net">
+<link rel="dns-prefetch" href="https://api.vturb.com.br">
    
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://everydaynationalnews.site">
